@@ -140,9 +140,9 @@ this repository contains the full copyright notices and license terms. -->
                     <image name="tryton-dialog-information"/>
                     <group col="1" id="labels">
                         <label string="You will be able to configure your installation"
-                            align="0.0" id="configure"/>
+                            yalign="0.0" id="configure"/>
                         <label string="depending on the modules you have installed."
-                            align="0.0" id="depending"/>
+                            yalign="0.0" id="depending"/>
                     </group>
                 </form>
                 ]]>
@@ -167,10 +167,10 @@ this repository contains the full copyright notices and license terms. -->
                 <form string="System Upgrade" col="2">
                     <image name="tryton-dialog-information"/>
                     <group col="4" id="labels">
-                        <label align="0.0"
+                        <label yalign="0.0"
                             string="Your system will be upgraded."
                             colspan="4" id="upgraded"/>
-                        <label align="0.0"
+                        <label yalign="0.0"
                             string="Note that this operation my take a few minutes."
                             colspan="4" id="operation"/>
                         <separator name="module_info"/>
@@ -187,7 +187,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="arch" type="xml">
                 <![CDATA[
                 <form string="System upgrade done" col="1">
-                    <label align="0.0"
+                    <label yalign="0.0"
                         string="The modules have been upgraded / installed !"
                         id="modules"/>
                 </form>
