@@ -21,7 +21,7 @@ this repository contains the full copyright notices and license terms. -->
                     <field name="lang"/>
                     <label name="module"/>
                     <field name="module"/>
-                    <group col="2" colspan="6" expand="1" id="src_value">
+                    <group col="2" colspan="6" yexpand="1" id="src_value">
                         <separator name="src"/>
                         <separator name="value"/>
                         <field name="src"/>
